# pjm-south-lmp-forecast

./: .gitignore  README.md  USER_GUIDE.md  cli.py  pyproject.toml  requirements.txt
config/: nerc_holidays.yaml  settings.yaml
notebooks/: exploration.ipynb
src/: __init__.py
src/data/: __init__.py  calendar_utils.py  capacity_client.py  eia_client.py  gas_client.py  iso_client.py  market_client.py  mock_data.py  morningstar_client.py  openmeteo_client.py  outage_client.py  pjm_client.py  weather_client.py
src/evaluation/: __init__.py  backtester.py  diagnostics.py  metrics.py  reports.py
src/features/: __init__.py  enhanced_features.py  forecast_error.py  lags.py  load_features.py  market_features.py  pipeline.py  regime_features.py  renewable_features.py  temporal_features.py  user_inputs.py  weather_features.py
src/forecast/: __init__.py  engine.py
src/ingest/: __init__.py  daily_ingest.py
src/models/: __init__.py  ensemble.py  lightgbm_model.py  ridge_model.py  spike_classifier.py  tuning.py
tests/: test_enhanced_features.py  test_features.py  test_forecast.py  test_friday_mode.py  test_models.py  test_pipeline.py
